# Dake

./: Cargo.toml  Dockerfile.dake  Makefile  README.md
src/: caller.rs  caller.rs~  constants.rs  env_variables.rs  fetch.rs  fetch.rs~  lib.rs  macros.rs  macros.rs~  main.rs  process_id.rs  target_label.rs  target_label.rs~  utils.rs
src/caller/: fetch_id.rs  mod.rs  run.rs  start.rs  utils.rs
src/daemon/: daemon_stream.rs  fs.rs  listen.rs  message_ctx.rs  mod.rs  notif.rs  process_datas.rs  state.rs
src/daemon/communication/: message_ctx.rs  messages.rs  mod.rs  notif.rs  socket.rs  utils.rs
src/daemon/handlers/: done_handle.rs  error_handler.rs  fetch_handler.rs  fresh_request_handler.rs  log_handler.rs  makefile_handler.rs  mod.rs  new_process_handler.rs
src/daemon/memory/: config.rs  daemon_id.rs  fs.rs  mod.rs  state.rs
src/deamon/: listen.rs  mod.rs
src/fetch/: mod.rs
src/lexer/: directive.rs  host_id.rs  lexer.rs  makefile.rs  mod.rs  target_label.rs  tokens.rs
src/makefile/: generate.rs  makefile.rs  makefile.rs~  makefiles_set.rs  mod.rs  mod.rs~
src/network/: broadcast.rs  distribute.rs  distribute.rs~  fetch.rs  fetch_handler.rs  fetch_handler.rs~  fs.rs  fs.rs~  listen.rs  listen.rs~  makefile.rs  makefile.rs~  makefile_receiver.rs  makefile_receiver.rs~  message_ctx.rs  messages.rs  messages.rs~  mod.rs  new_process.rs  new_process.rs~  process_datas.rs  socket.rs  state.rs  stream.rs  utils.rs
tests/: test_basic.rs  test_entry.rs  test_fetch_chain.rs  test_redundant.rs
tests/common/: cluster.rs  docker.rs  mod.rs  setup.rs
(+13 files in other folders)
