[package]
name = "dake"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
postcard = { version = "1.1.3", features = ["alloc"] }
derive-getters = "0.5.0"
tracing = "0.1.41"
serde = { version = "1.0.139", features = ["derive"] }
tempfile = "3.22.0"
tokio = { version= "1.47.1", features = ["full"] }
blake3 = "1.8.2"
hex = "0.4.3"
directories = "6.0.0"
clap = { version = "4.5.48", features = ["derive"] }
notifier_hub = "0.1.2"
which = "8.0.0"
tracing-subscriber = "0.3.20"
shiplift = "0.7"
futures = "0.3.31"
once_cell = "1.21.3"

